# serverCheck

./: .gitignore  Cargo.toml  LICENSE  build.rs  readme.md  resources.rc
src/: main.rs
