[package]
name = "server_check"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI框架
eframe = "0.28"
egui = "0.28"
# HTTP客户端
reqwest = { version = "0.12", features = ["json"] }
# 异步运行时
tokio = { version = "1.0", features = ["full"] }
# JSON序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 错误处理
anyhow = "1.0"
# 时间处理
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
env_logger = "0.11"
# 浏览器打开功能
webbrowser = "0.8"

[build-dependencies]
embed-resource = "2.4"
